# qt_minimum_template

./: .gitignore  CMakeLists.txt  Deploy.pri  demo_app.pro  deploy.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: build_on_windows.yml  windows.yml
cmake/: CMakeLists.txt  mainwindow.ui
cmake/res/: res.qrc
qmake/: .clang-format  .gitignore  changelog.pri  demo_app.pro  mainwindow.cpp  mainwindow.h
res/: res.qrc  ui.qss
src/: CMakeLists.txt  mainwindow.cpp
src/main_window/: main.cpp  mainwindow.cpp  mainwindow.h
ui/: mainwindow.ui
